--- a/src/DetritusThresher.Migrations/DetritusThresher.Migrations.csproj
+++ b/src/DetritusThresher.Migrations/DetritusThresher.Migrations.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\DetritusThresher.Core\DetritusThresher.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentMigrator" Version="3.1.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
