--- a/src/DetritusThresher.Core/DetritusThresher.Core.csproj
+++ b/src/DetritusThresher.Core/DetritusThresher.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NPoco" Version="3.9.4" />
+    <PackageReference Include="sqlite" Version="3.13.0" />
   </ItemGroup>
 
 </Project>
