--- a/src/DetritusThresher.Migrations/DetritusThresher.Migrations.csproj
+++ b/src/DetritusThresher.Migrations/DetritusThresher.Migrations.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="FluentMigrator" Version="3.1.3" />
+    <PackageReference Include="FluentMigrator.Runner" Version="3.1.3" />
+    <PackageReference Include="FluentMigrator.Runner.SQLite" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.2.2" />
   </ItemGroup>
 
   <PropertyGroup>
