--- a/test/DetritusThresher.Testing/DetritusThresher.Testing.csproj
+++ b/test/DetritusThresher.Testing/DetritusThresher.Testing.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="sqlite" Version="3.13.0" />
+    <PackageReference Include="fluentmigrator" Version="3.1.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Sqlite" Version="3.13.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
 </Project>
