--- a/test/DetritusThresher.Core.Tests/DetritusThresher.Core.Tests.csproj
+++ b/test/DetritusThresher.Core.Tests/DetritusThresher.Core.Tests.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="fluentmigrator" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="Sqlite" Version="3.13.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.2.2" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0" />
@@ -15,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\DetritusThresher.Core\DetritusThresher.Core.csproj" />
+    <ProjectReference Include="..\..\src\DetritusThresher.Migrations\DetritusThresher.Migrations.csproj" />
   </ItemGroup>
 
 </Project>
