--- a/src/DetritusThresher.Core/DetritusThresher.Core.csproj
+++ b/src/DetritusThresher.Core/DetritusThresher.Core.csproj
@@ -5,9 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="2.2.2" />
     <PackageReference Include="NPoco" Version="3.9.4" />
-    <PackageReference Include="sqlite" Version="3.13.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.109.2" />
   </ItemGroup>
 
 </Project>
