--- a/test/DetritusThresher.Core.Tests/DetritusThresher.Core.Tests.csproj
+++ b/test/DetritusThresher.Core.Tests/DetritusThresher.Core.Tests.csproj
@@ -9,8 +9,7 @@
   <ItemGroup>
     <PackageReference Include="fluentmigrator" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Sqlite" Version="3.13.0" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.2.2" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.109.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0" />
