--- a/src/DetritusThresher.ConsoleScanner/DetritusThresher.ConsoleScanner.csproj
+++ b/src/DetritusThresher.ConsoleScanner/DetritusThresher.ConsoleScanner.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="fluentmigrator" Version="3.1.3" />
     <ProjectReference Include="..\DetritusThresher.Migrations\DetritusThresher.Migrations.csproj" />
     <ProjectReference Include="..\DetritusThresher.Core\DetritusThresher.Core.csproj" />
   </ItemGroup>
