--- a/src/DetritusThresher.ConsoleScanner/DetritusThresher.ConsoleScanner.csproj
+++ b/src/DetritusThresher.ConsoleScanner/DetritusThresher.ConsoleScanner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.4.3" />
